@@ -22,59 +22,96 @@ public class UsageController {
     @GetMapping("/usageChart")
     public String usageChart(
             @RequestParam(required = false, name = "years") List<String> years,
-            @RequestParam(defaultValue = "all") String region,
+            @RequestParam(required = false) String region,
             Model model) throws Exception {
 
-        if (years == null || years.isEmpty()) {
-            years = List.of("2023");
+        // 선택값이 없으면 초기화 상태로 빈 데이터 전달
+        if (years == null || years.isEmpty() || region == null || region.isBlank()) {
+            model.addAttribute("chartDataJson", "[]");
+            model.addAttribute("allDataMapJson", "{}");
+            model.addAttribute("regionList", usageService.getAllRegions());
+            model.addAttribute("selectedYears", Collections.emptyList());
+            model.addAttribute("selectedRegion", null);
+            return "usageChart";
         }
 
-        // 전력 사용량 데이터 가져오기
-        List<ElectUsageVO> usageList = usageService.getUsageByYearsAndRegion(years, region);
-        
-        // usageList 내용 확인
-        System.out.println("usageList: " + usageList);  // usageList 출력
-        if (usageList != null) {
-            for (ElectUsageVO vo : usageList) {
-                // 각 전력 사용량 객체 출력
-                System.out.println("Year: " + vo.getYear() + ", Region: " + vo.getRegion());
-                System.out.println("Monthly Data: " + vo.getMonth1() + ", " + vo.getMonth2() + ", " +
-                                   vo.getMonth3() + ", " + vo.getMonth4() + ", " +
-                                   vo.getMonth5() + ", " + vo.getMonth6() + ", " +
-                                   vo.getMonth7() + ", " + vo.getMonth8() + ", " +
-                                   vo.getMonth9() + ", " + vo.getMonth10() + ", " +
-                                   vo.getMonth11() + ", " + vo.getMonth12());
+        // 선택값이 있으면 작년 데이터 포함하여 조회 준비
+        Set<String> yearsWithPrev = new LinkedHashSet<>(years);
+        for (String y : years) {
+            try {
+                int prevYear = Integer.parseInt(y) - 1;
+                if (prevYear >= 2014) {
+                    yearsWithPrev.add(String.valueOf(prevYear));
+                }
+            } catch (NumberFormatException e) {
+                // 무시
             }
-        } else {
-            System.out.println("No data found for the given years and region.");
         }
 
-        // region 목록 가져오기
-        List<String> regionList = usageService.getAllRegions();
+        List<String> yearsToQuery = new ArrayList<>(yearsWithPrev);
+        Collections.sort(yearsToQuery);
 
-        // 월별 데이터 리스트로 변환
-        List<Map<String, Object>> chartData = usageList.stream().map(vo -> {
-            Map<String, Object> row = new HashMap<>();
-            row.put("year", vo.getYear());
-            row.put("region", vo.getRegion());
-            row.put("monthlyData", List.of(
-                vo.getMonth1(), vo.getMonth2(), vo.getMonth3(), vo.getMonth4(),
-                vo.getMonth5(), vo.getMonth6(), vo.getMonth7(), vo.getMonth8(),
-                vo.getMonth9(), vo.getMonth10(), vo.getMonth11(), vo.getMonth12()
-            ));
-            return row;
-        }).collect(Collectors.toList());
+        // DB에서 선택된 연도 및 지역의 데이터 조회
+        List<ElectUsageVO> usageList = usageService.getUsageByYearsAndRegion(yearsToQuery, region);
 
-        // JSON 문자열로 변환
+        // 월별 데이터 맵 구성
+        Map<String, List<Integer>> dataMap = new HashMap<>();
+        for (ElectUsageVO vo : usageList) {
+            dataMap.put(vo.getYear() + "_" + vo.getRegion(), extractMonthlyData(vo));
+        }
+
+        // 현재 선택한 연도 데이터만 필터링 후 맵핑
+        List<Map<String, Object>> currentYearData = usageList.stream()
+                .filter(vo -> years.contains(vo.getYear()))
+                .map(vo -> {
+                    Map<String, Object> map = new HashMap<>();
+                    map.put("year", vo.getYear());
+                    map.put("region", vo.getRegion());
+                    map.put("monthlyData", dataMap.get(vo.getYear() + "_" + vo.getRegion()));
+                    return map;
+                })
+                .collect(Collectors.toList());
+
+        // 누락된 조합에 null 데이터 추가 (빈 월별 데이터)
+        Set<String> presentKeys = currentYearData.stream()
+                .map(m -> m.get("year") + "_" + m.get("region"))
+                .collect(Collectors.toSet());
+
+        List<String> regionList = "all".equals(region) ? usageService.getAllRegions() : List.of(region);
+
+        for (String y : years) {
+            for (String r : regionList) {
+                String key = y + "_" + r;
+                if (!presentKeys.contains(key)) {
+                    Map<String, Object> dummy = new HashMap<>();
+                    dummy.put("year", y);
+                    dummy.put("region", r);
+                    dummy.put("monthlyData", Arrays.asList(null, null, null, null, null, null, null, null, null, null, null, null));
+                    currentYearData.add(dummy);
+                }
+            }
+        }
+
+        // JSON 직렬화
         ObjectMapper mapper = new ObjectMapper();
-        String chartDataJson = mapper.writeValueAsString(chartData);
+        String chartDataJson = mapper.writeValueAsString(currentYearData);
+        String allDataMapJson = mapper.writeValueAsString(dataMap);
 
-        // 모델에 데이터 추가
+        // 모델에 데이터 전달
         model.addAttribute("chartDataJson", chartDataJson);
-        model.addAttribute("regionList", regionList);
+        model.addAttribute("allDataMapJson", allDataMapJson);
+        model.addAttribute("regionList", usageService.getAllRegions());
         model.addAttribute("selectedYears", years);
         model.addAttribute("selectedRegion", region);
 
         return "usageChart";
+    }
+
+    private List<Integer> extractMonthlyData(ElectUsageVO vo) {
+        return List.of(
+                vo.getMonth1(), vo.getMonth2(), vo.getMonth3(), vo.getMonth4(),
+                vo.getMonth5(), vo.getMonth6(), vo.getMonth7(), vo.getMonth8(),
+                vo.getMonth9(), vo.getMonth10(), vo.getMonth11(), vo.getMonth12()
+        );
     }
 }
